# Change Log
All notable changes to this project will be documented in this file.

## [3.1.5] - 2017-06-28
# Added
- A test to determine the behavior when adding a dev + stabilization branch

## [3.1.4] - 2017-06-22
# Fixed
- the user is instructed to track remote counterparts of locally created branches
# Added
- no_octopus option to disable octopus merge (do consecutive merge instead)
- robust_merge strategy to perform both (and keep the best result from) octopus and consecutive merges.

## [3.1.3] - 2017-05-22
# Fixed
- Log traceback of unknown errors
- Errors during rmtree (local clone reset) used to crash the jobs
# Added
- Bert-E can send exceptions to Sentry
- System test relative to development branch deletion
- System test relative to stabilization branch addition
- Bert-E explicitely name target branch in the integration pr created message

## [3.1.2] - 2017-05-09
# Fixed
- Fix default branch prefix in settings

## [3.1.1] - 2017-05-04
# Added
- Bert-E adds a link to the commit URL in the message posted for a failed build
- Bert-E's REST API was bootstrapped
- REST API 'rebuild_queues' command
- JIRA checks can be bypassed according to the source branch prefix (e.g. "documentation")
# Fixed
- Bert-E no longer crashes silently when encountering an unknown issue type

## [3.1.0] - 2017-04-21
# Changed
- No longer create integration branch/pull request for the first destination branch
- Lossy resets are detected in a cleaner and more reliable way
# Added
- BertE can block when a pull request diverges too much from its destination branch

## [3.0.11] - 2017-04-14
# Fixed
- Random options were showed as active in the robot's greetings message.
- Don't display "wrong destination branch" message in case of a failed git ls-remote
- Commit link points to the build in the robot's completed job queue.
- Prevent from putting duplicate jobs in the task queue
- Ignore suffixed versions (such as "5.1.9_hf3") in JIRA fixVersion field

## [3.0.10] - 2017-03-27
# Added