@@ -4,16 +4,17 @@ All notable changes to this project will be documented in this file.
 ## [3.1.5] - 2017-06-28
 # Added
 - A test to determine the behavior when adding a dev + stabilization branch
+# Fixed
+- The reset command is now robust to amends on the feature branch
 
 ## [3.1.4] - 2017-06-22
-# Fixed
-- the user is instructed to track remote counterparts of locally created branches
 # Added
 - no_octopus option to disable octopus merge (do consecutive merge instead)
 - robust_merge strategy to perform both (and keep the best result from) octopus and consecutive merges.
 
 ## [3.1.3] - 2017-05-22
 # Fixed
+- The user is instructed to track remote counterparts of locally created branches
 - Log traceback of unknown errors
 - Errors during rmtree (local clone reset) used to crash the jobs
 # Added
